Bug 1064063 - switch elements ignore default if allowReorder is set. r=dholbert